--- a/renpons.css
+++ b/renpons.css
@@ -343,10 +343,6 @@
         .btn{
             font-size: 0.9rem;
         }
-
-        #btn{
-            margin-right: 6%;
-        }
     }
 
     .block{
@@ -423,7 +419,7 @@
 
     .info{
         width: 100%;
-        margin-left: 10%;
+        margin-left: 5%;
         display: flex;
 
         .inf{
@@ -490,7 +486,7 @@
     }
 
     #btn{
-        margin-right: 8rem;
+        margin-right: 0.5rem;
     }
 
     .block{
@@ -498,7 +494,7 @@
     }
 
     .carousel{
-        width: 95%;
+        width: 100%;
     }
 
     .icons{
@@ -675,7 +671,7 @@
     }
 
     .navbar{
-        width: 88%;
+        width: 95%;
 
         .navbar-nav{
             font-size: 0.8rem;
@@ -705,7 +701,7 @@
     }
 
     .block{
-        width: 90%;
+        width: 98%;
     }
 
     .carousel{
@@ -736,11 +732,11 @@
     }
 
     .sd{
-        width: 107%;
+        width: 100%;
     }
 
     .slider, .slider2, .slider3{
-        height: 80%;
+        height: 100%;
         margin-left: 5rem;
         padding: 2rem;
 
@@ -812,13 +808,14 @@
     }
 
     .bottom{
+        width: 98%;
         .bottom-top{
             font-size: 0.7rem;
             width: 75%;
         }
 
         .bottom-btm{
-            width: 90%;
+            width: 100%;
 
             .btm-1{
                 display: block;
@@ -837,7 +834,7 @@
     }
 
     footer{
-        width: 90%;
+        width: 98%;
 
         .ftr-top{
             margin-left: 1rem;
@@ -928,7 +925,7 @@
     }
 
     #btn{
-        margin-right: 25%;
+        margin-right: 15%;
     }
 
     .block{
@@ -1138,7 +1135,7 @@
     }
     
     .navbar{
-        width: 100%;
+        width: 95%;
 
         #lg{
             font-size: 1.1rem;
@@ -1170,7 +1167,7 @@
     }
 
     .block{
-        width: 100%;
+        width: 95%;
             font-size: 0.6rem;
             line-height: 1;
 
@@ -1189,12 +1186,11 @@
     }
 
     .carousel{
-        width: 100%;
+        width: 95%;
     }
 
     .icons{
-        width: 100%;
-        margin-top: -3%;
+        width: 80%;
         height: 7rem;
 
         img{
@@ -1203,7 +1199,6 @@
         }
 
         .card{
-            margin-left: 0rem;
             margin-top: 1rem;
         }
     }
@@ -1219,7 +1214,7 @@
     }
 
     .sd{
-        width: 110%;
+        width: 100%;
     }
 
     #prev, #prev2, #prev3{
@@ -1228,7 +1223,7 @@
     }
     
     #next, #next2, #next3{
-        right: 0;
+        right: 60px;
         z-index: 999;
     }
 
@@ -1276,14 +1271,14 @@
     }
 
     .publisher{
-        margin-left: 25%;
+        width: 85%;
+        margin-left: 5%;
         grid-template-columns: repeat(2,1fr);
         gap: 0.1rem;
 
         .publisher-box{
             display: block;
             margin: 0;
-            margin-left: 2%;
             width: 50%;
 
             .box1{
@@ -1297,7 +1292,7 @@
     .info{
         display: block;
         width: 50%;
-        margin-left: 30%;
+        margin-left: 20%;
 
         .inf{
             display: block;
@@ -1314,17 +1309,17 @@
     }
 
     .bottom{
+        width: 95%;
         
         .bottom-top{
-            margin-left: 13%;
             padding: 0.5rem;
-            width: 80%;
+            width: 75%;
             font-size: 0.5rem;
         }
 
         .bottom-btm{
             display: block;
-            width: 103%;
+            width: 100%;
 
             .btm-1{
                 display: block;
@@ -1440,7 +1435,7 @@
     }
 
     .navbar{
-        width: 100%;
+        width: 80%;
 
         #lg{
             font-size: 0.8rem;
@@ -1453,7 +1448,7 @@
         }
 
         #btn{
-            margin-left: -20px;
+            margin-left: 0;
 
             button{
                 margin-left: 5px;
@@ -1464,7 +1459,7 @@
 
         #search{
             input{
-                width: 3rem;
+                width: 4rem;
                 height: 30px;
                 font-size: 0.5rem;
             }
@@ -1472,7 +1467,7 @@
     }
 
     .block{
-        width: 100%;
+        width: 90%;
         line-height: 5px;
     }
 
@@ -1481,11 +1476,12 @@
     }
 
     .carousel{
-        width: 98%;
+        width: 90%;
     }
 
     .icons{
-        width: 100%;
+        width: 90%;
+        margin-left: -3rem;
         margin-top: -10%;
         padding: 0;
 
@@ -1499,7 +1495,7 @@
     }
 
     .sd{
-        width: 110%;
+        width: 98%;
     }
 
     .tabs ul{
@@ -1513,7 +1509,7 @@
     }
     
     .info{
-        margin-left: 25%;
+        margin-left: 20%;
         width: 50%;
 
         .info-img{
@@ -1524,7 +1520,7 @@
     .bottom{
         
         .bottom-top{
-            margin-left: 13%;
+            margin-left: 10%;
             padding: 0.5rem;
             width: 80%;
             font-size: 0.4rem;
@@ -1532,7 +1528,7 @@
 
         .bottom-btm{
             display: block;
-            width: 100%;
+            width: 95%;
 
             .btm-1{
                 display: block;
@@ -1568,7 +1564,7 @@
     }
 
     footer{
-        width: 100%;
+        width: 90%;
 
         .ftr-top{
             margin-left: 20%;
@@ -1613,11 +1609,10 @@
     }
 
     .navbar{
-        width: 90%;
+        width: 70%;
 
         #btn{
-            margin-right: 50%;
-            margin-left: -35px;
+            margin-right: 550px;
 
             button{
                 margin-left: 5px;
@@ -1630,10 +1625,47 @@
                 height: 30px;
                 margin-left: -10px;
             }
-            button{
-                display: none;
+        }
+    }
 
+    .icons{
+        margin-left: -3rem;
+        width: 90%;
+    }
+    
+    .sd{
+        width: 100%;
+    }
+
+    .info{
+        display: block;
+        width: 50%;
+        margin-left: 20%;
+
+        .inf{
+            display: block;
+        }
+
+        .info-img{
+            margin-top: 1rem;
+            width: 50%;
+
+            img{
+                width: 8rem;
             }
+        }
+    }
+
+    .bottom{
+        width: 95%;
+        
+        .bottom-top{
+            width: 65%;
+        }
+
+        .bottom-btm{
+            display: block;
+            width: 100%;
         }
     }
 
