--- a/style.css
+++ b/style.css
@@ -236,7 +236,8 @@ body{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 1rem;
-    margin-left: 10%;
+    padding: 1rem;
+    padding-left: 4rem;
 
     .publisher-box{
         display: flex;
@@ -254,6 +255,7 @@ body{
     margin-top: 1rem;
     margin-left: 10%;
     display: flex;
+    padding-left: 1rem;
 
     .inf{
         display: flex;
